@@ -1,3 +1,7 @@
+# 7 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
+# mask for force testing cmake build system
+=net-p2p/eiskaltdc-9999
+
 # 4 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
 # not build, upsteam bug;
 # nss version mistmatch
